--- a/README
+++ b/README
@@ -1,1 +1,24 @@
 # dns
+
+The sample code to use the dns client:
+
+#include <dns/dns.h>
+#include <stdio.h>
+
+int main(void) {
+	struct request r = {"10.0.2.3", 53, udp, "github.com", DNS_TYPE_A};
+	struct response resp;
+	int len = resolv(r, &resp);
+	if (len != 0)
+	{
+		perror("error");
+	}
+	else
+	{
+		print_response(resp);
+		free_response(resp);
+	}
+
+	return 0;
+}
+
