Upated README: added python example

--- a/README
+++ b/README
@@ -22,3 +22,17 @@ int main(void)
 
 	return 0;
 }
+
+The sample code to use the python package:
+
+import dns
+
+request = dns.Request()
+request.Address = "10.0.2.3"
+request.Port = 53
+request.Protocol = 1
+request.Qname = "github.com"
+request.Type = 1
+
+response = dns.Resolv(request)
+print(response)
