--- a/README
+++ b/README
@@ -23,6 +23,29 @@ int main(void)
 	return 0;
 }
 
+DNS over TLS example:
+
+#include <dns/dns.h>
+#include <stdio.h>
+
+int main(void)
+{
+    struct request r = {"dns.server", 853, tls, "github.com", DNS_TYPE_A, "rootCA.crt", "certificate.pem"};
+    struct response resp;
+    int result = resolv(r, &resp);
+    if (result != 0)
+    {
+        perror("error");
+    }
+    else
+    {
+        print_response(resp);
+        free_response(resp);
+    }
+
+    return 0;
+}
+
 The sample code to use the python package:
 
 import dns
@@ -36,3 +59,19 @@ request.Type = dns.DNS_TYPE_A
 
 response = dns.Resolv(request)
 print(response)
+
+DNS over TLS example:
+
+import dns
+
+request = dns.Request()
+request.Address = "dns.server"
+request.Port = 853
+request.Protocol = 2
+request.Qname = "github.com"
+request.Type = dns.DNS_TYPE_A
+request.Ca = "rootCA.crt"
+request.Certificate = "certificate.pem"
+
+response = dns.Resolv(request)
+print(response) 
