--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 
 The sample code to use the dns client:
 
+DNS over UDP example:
+
 #include <dns/dns.h>
 #include <stdio.h>
 
@@ -46,14 +48,39 @@ int main(void)
     return 0;
 }
 
+DNS over HTTPS example:
+
+#include <dns/dns.h>
+#include <stdio.h>
+
+int main(void)
+{
+    struct request r = {"dns.server", 443, https, "github.com", DNS_TYPE_A, "rootCA.crt", "certificate.pem"};
+    struct response resp;
+    int result = resolv(r, &resp);
+    if (result != 0)
+    {
+        perror("error");
+    }
+    else
+    {
+        print_response(resp);
+        free_response(resp);
+    }
+
+    return 0;
+}
+
 The sample code to use the python package:
+
+DNS over UDP example:
 
 import dns
 
 request = dns.Request()
 request.Address = "10.0.2.3"
 request.Port = 53
-request.Protocol = 1
+request.Protocol = dns.Protocol.UDP
 request.Qname = "github.com"
 request.Type = dns.DNS_TYPE_A
 
@@ -67,7 +94,7 @@ import dns
 request = dns.Request()
 request.Address = "dns.server"
 request.Port = 853
-request.Protocol = 2
+request.Protocol = dns.Protocol.TLS
 request.Qname = "github.com"
 request.Type = dns.DNS_TYPE_A
 request.Ca = "rootCA.crt"
@@ -75,3 +102,19 @@ request.Certificate = "certificate.pem"
 
 response = dns.Resolv(request)
 print(response) 
+
+DNS over HTTPS example:
+
+import dns
+
+request = dns.Request()
+request.Address = "dns.server"
+request.Port = 443
+request.Protocol = dns.Protocol.HTTPS
+request.Qname = "github.com"
+request.Type = dns.DNS_TYPE_A
+request.Ca = "rootCA.crt"
+request.Certificate = "certificate.pem"
+
+response = dns.Resolv(request)
+print(response)
