--- a/README
+++ b/README
@@ -73,6 +73,7 @@ request.Port = 53
 request.Protocol = dns.Protocol.UDP
 request.Qname = "github.com"
 request.Type = dns.DNS_TYPE_A
+request.Class = dns.Class.IN
 
 response = dns.Resolv(request)
 print(response)
@@ -87,6 +88,7 @@ request.Port = 853
 request.Protocol = dns.Protocol.TLS
 request.Qname = "github.com"
 request.Type = dns.DNS_TYPE_A
+request.Class = dns.Class.IN
 request.Ca = "rootCA.crt"
 request.Certificate = "certificate.pem"
 
@@ -103,8 +105,9 @@ request.Port = 443
 request.Protocol = dns.Protocol.HTTPS
 request.Qname = "github.com"
 request.Type = dns.DNS_TYPE_A
+request.Class = dns.Class.IN
 request.Ca = "rootCA.crt"
 request.Certificate = "certificate.pem"
 
 response = dns.Resolv(request)
-print(response)
+print(response) 
